Adds IE canvas fix (hopefully)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE8">
 
+	<!--[if lte IE 8]><script type="text/javascript" src="js/excanvas.compiled.js"></script><![endif]-->
+
 	<style>
 		html{
 			width:100%;
@@ -584,7 +586,6 @@
 				thickness:30
 			},
 			mount:{
-				color:'#f00',
 				sections:[
 					[
 						{
